0.1.0: 
- Initial release

0.1.1:
- SOAPpy struct type recognized
- Category division in predefined data sources
- Added Kegg to predefined data sources
- Intersect/union/except added with Infix operators  (e.g. |Intersect|)
- Infix operators for Match/Stack
- Improvement in TSV detection of skipped rows and fieldnames handling
- Load wrapper_sql and wrapper_tsv only when needed
- Add Python version check
- Several bug fixes